fix: resolve shortcut icon color inversion issue in dark mode

--- a/style.css
+++ b/style.css
@@ -234,7 +234,15 @@ html:has(
 	-webkit-filter: invert(1) hue-rotate(180deg);
 
 	& #darkTheme,
-	& .favicon {
+	& .favicon,
+	& .shortcutLogoContainer,
+	& .googleAppsCont .dot-icon,
+	& .bookmark-button,
+	& .todoListCont .dot-icon,
+	& .searchIcon svg,
+	& #aiToolsIcon,
+	& .micIcon,
+	& .tIcon {
 		filter: invert(1) hue-rotate(180deg);
 		-webkit-filter: invert(1) hue-rotate(180deg);
 	}
@@ -272,7 +280,15 @@ body[data-bg="wallpaper"][sysTheme="systemDark"]:has(
 	-webkit-filter: invert(1) hue-rotate(180deg);
 
 	& #darkTheme,
-	& .favicon {
+	& .favicon,
+	& .shortcutLogoContainer,
+	& .googleAppsCont .dot-icon,
+	& .bookmark-button,
+	& .todoListCont .dot-icon,
+	& .searchIcon svg,
+	& #aiToolsIcon,
+	& .micIcon,
+	& .tIcon {
 		filter: invert(1) hue-rotate(180deg);
 		-webkit-filter: invert(1) hue-rotate(180deg);
 	}
